fix for weird linebreak on mobile

--- a/web/sites/default/themes/ubnext/less/database-search.less
+++ b/web/sites/default/themes/ubnext/less/database-search.less
@@ -258,6 +258,7 @@
         }
        .database-item-link-title {
           a{
+            margin-right: 26px;
             .link-arrow();
             &:hover{
               color: @ub-link-color;
@@ -266,7 +267,6 @@
           }
 
           .recommended-database{
-            margin-left: 26px;
             background: #000;
             padding: 0 4px 1px 4px;
             color: #fff;
